--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,13 +4,15 @@ Title: CALCULATES the SPI and SPEI from NASA POWER DATA
 Version: 0.1.0
 Author: Gabriel Constantino Blain, Graciela da Rocha Sobierajski and Leticia Lopes Martins
 Maintainer: Gabriel Constantino Blain <gabriel.blain@sp.gov.br>
-Description: The PowerSDI is calculates the SPI and SPEI from NASA POWER data.
-    It calculates these two indices from scientific and operational viewpoints.
-    The functions ScientSDI.R, Accuracy.R and Reference.R verifies
-    If the SPI and SPEI frequency distributions meet the normality assumption.
-    How well NASAPOWER estimates represent “real-world” data.
-    The OperatSDI.R function calculates both SPI and SPEI in an operational mode.
-    The PowerSDI adopts a basic time scale that splits each month into four subperiods.
+Description: The PowerSDI calculates the SPI and SPEI using NASA POWER data.
+    It also calculates these indices using a reference data source.
+    The functions ScientSDI.R, Accuracy.R and Reference.R verify,
+    if the SPI and SPEI frequency distributions meet the normality assumption
+    and how well NASAPOWER estimates represent “real-world” data.
+    The OperatSDI.R function calculates the indices in an operational/routine mode.
+    The PowerSDI also calculates potential evapotranspitation amounts (PE) and,
+    the difference between rainfall (P) and EP (PEP).
+    The package adopts a basic time scale that splits each month into four subperiods.
     Days 1 to 7, days 8 to 14, days 15 to 21, and days 22 to 28, 29, 30, or 31 depending on the month.
     TS=4 corresponds to a 12-month length moving (calculated 4 times a month).
     TS=48 corresponds to a 1-month length moving (calculated 4 times a month).
