--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,21 @@
 Package: PowerSDI
 Type: Package
-Title: CALCULATES the SPI and SPEI USING NASA POWER DATA
+Title: CALCULATES STANDARDIZED DROUGHT INDICES USING NASA POWER DATA
 Version: 1.0.0
 Author: Gabriel Constantino Blain, Graciela da Rocha Sobierajski and Leticia Lopes Martins
 Maintainer: Gabriel Constantino Blain <gabriel.blain@sp.gov.br>
-Description: The PowerSDI calculates the SPI and SPEI using NASA POWER data.
+Description: A set of functions designed to calculate the standardized precipitation and
+    standardized precipitation evapotranspiration indices using NASA POWER data.
     It also calculates these indices using a reference data source.
-    The functions ScientSDI.R, Accuracy.R and Reference.R verify,
-    if the SPI and SPEI frequency distributions meet the normality assumption
-    and how well NASAPOWER estimates represent “real-world” data.
-    The OperatSDI.R function calculates the indices in an operational/routine mode.
-    The PowerSDI also calculates potential evapotranspitation amounts (PE) and,
-    the difference between rainfall (P) and EP (PEP).
-    The package adopts a basic time scale that splits each month into four subperiods.
-    Days 1 to 7, days 8 to 14, days 15 to 21, and days 22 to 28, 29, 30, or 31 depending on the month.
+    The functions verify if the indices estimates meet the normality assumption
+    and how well NASA POWER estimates represent “real-world” data.
+    It also calculates the indices in a routine mode.
+    The package also estimates potential evapotranspiration amounts and
+    the difference between rainfall and potential evapotranspiration.
+    The functions adopt a basic time scale that splits each month into four periods.
+    Days 1 to 7, days 8 to 14, days 15 to 21, and days 22 to 28, 29, 30, or 31.
     TS=4 corresponds to a 12-month length moving (calculated 4 times a month).
     TS=48 corresponds to a 1-month length moving (calculated 4 times a month).
-    This time scale (TS) is referred as to quart.month.
 License: CC0
 Encoding: UTF-8
 LazyData: true
