--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,9 @@ export(PlotData)
 export(Reference)
 export(ScientSDI)
 import(lmom)
-import(nasapower)
 importFrom(graphics,par)
 importFrom(graphics,title)
+importFrom(nasapower,get_power)
 importFrom(stats,cor)
 importFrom(stats,median)
 importFrom(stats,na.omit)
