--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,10 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Depends: 
-    R (>= 2.10), nasapower, lmom
+    R (>= 2.10)
+Imports:
+    lmom,
+    nasapower
 URL: https://github.com/gabrielblain/PowerSDI
 BugReports: https://github.com/gabrielblain/PowerSDI/issues
 Suggests: 
