--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,8 +34,8 @@ Description: A set of functions designed to calculate the standardized
     evapotranspiration are also calculated.  The functions adopt a basic time
     scale that splits each month into four periods.  Days 1 to 7, days 8 to 14,
     days 15 to 21, and days 22 to 28, 29, 30, or 31.  Where TS=4 corresponds to
-    a 12-month length moving (calculated 4 times a month).  TS=48 corresponds to
-    a 1-month length moving (calculated 4 times a month).
+    a 12-month length moving window (calculated 4 times a month) and TS=48
+    corresponds to a 1-month length moving window (calculated 4 times a month).
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
