Update namespace to import only functions, not whole lmom

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,18 @@ export(OperatSDI)
 export(PlotData)
 export(Reference)
 export(ScientSDI)
-import(lmom)
 importFrom(graphics,par)
 importFrom(graphics,title)
+importFrom(lmom,cdfgam)
+importFrom(lmom,cdfgev)
+importFrom(lmom,cdfglo)
+importFrom(lmom,pelgam)
+importFrom(lmom,pelgev)
+importFrom(lmom,pelglo)
+importFrom(lmom,quagam)
+importFrom(lmom,quagev)
+importFrom(lmom,quaglo)
+importFrom(lmom,samlmu)
 importFrom(nasapower,get_power)
 importFrom(stats,cor)
 importFrom(stats,median)
