--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,6 +48,7 @@ Depends:
 Imports:
     graphics,
     lmom,
+    lubridate,
     nasapower,
     stats,
     utils
@@ -55,5 +56,6 @@ URL: https://github.com/gabrielblain/PowerSDI
 BugReports: https://github.com/gabrielblain/PowerSDI/issues
 Suggests: 
     testthat (>= 3.0.0),
+    vcr (>= 0.6.0),
     vdiffr (>= 1.0.0)
 Config/testthat/edition: 3
