--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,7 +55,10 @@ Imports:
 URL: https://github.com/gabrielblain/PowerSDI
 BugReports: https://github.com/gabrielblain/PowerSDI/issues
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0),
     vcr (>= 0.6.0),
     vdiffr (>= 1.0.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
