--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,PowerSDI.Accuracy)
 S3method(print,PowerSDI.Accuracy)
 export(Accuracy)
+export(OperatSDI)
 export(PlotData)
 export(Reference)
 export(ScientSDI)
