--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -61,4 +61,5 @@ Suggests:
     vcr (>= 0.6.0),
     vdiffr (>= 1.0.0)
 Config/testthat/edition: 3
+Config/testthat/parallel: true
 VignetteBuilder: knitr
