--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: PowerSDI
 Type: Package
-Title: Calculate Standardised Drought Indices Using NASA POWER Data
+Title: Calculate Standardized Drought Indices Using NASA POWER Data
 Version: 0.1.1
 Authors@R: c(
   person(
