Update fixtures for {vcr} cassettes

--- a/tests/fixtures/OperatSDI-HS.yml
+++ b/tests/fixtures/OperatSDI-HS.yml
@@ -19,27 +19,27 @@ http_interactions:
       content-language: en-US
       content-length: '2885'
       content-type: text/csv
-      date: Sat, 11 Nov 2023 03:58:02 GMT
+      date: Tue, 14 Nov 2023 11:13:55 GMT
       status: 'HTTP/2 200 '
       vary: Accept-Encoding
-      via: 1.1 b26d50f4268747fbb55ffbc1b1778adc.cloudfront.net (CloudFront), 1.1 705200fb622a45f111dbfe8a0df07cfa.cloudfront.net
+      via: 1.1 b26d50f4268747fbb55ffbc1b1778adc.cloudfront.net (CloudFront), 1.1 a5827c6929161188a77921b8908ec1b6.cloudfront.net
         (CloudFront)
-      x-amz-apigw-id: ONxHaGGwPHcEQXg=
-      x-amz-cf-id: KDpuSxEPHYRFVFhieqg08eDo0fSxDcjj1yWp1fMnwKLNId_-WfKktA==
+      x-amz-apigw-id: OYpx0HpnvHcEWgA=
+      x-amz-cf-id: UeAIkbV8P6oh_XBpiaJfBftkdd5zmlo5f-UAReNt-phlIkSSgWvz3w==
       x-amz-cf-pop:
       - MEL52-P1
       - MEL52-P1
       x-amzn-remapped-content-length: '2885'
-      x-amzn-requestid: 405aa0dd-8760-4e03-8d64-bc5ad6bea109
-      x-amzn-trace-id: Root=1-654efbc8-4b1f4f2a7974e4cd1e09506f
+      x-amzn-requestid: 5f8773a6-e5f7-4853-92cf-8de7ff38cc2c
+      x-amzn-trace-id: Root=1-65535671-395403ce4a6708d04e6455e1
       x-app-name: daily
       x-app-version: v2.4.5
-      x-archive-time: '1.362'
+      x-archive-time: '1.644'
       x-cache: Miss from cloudfront
-      x-data-sources: power,merra2
-      x-objects-time: '0.011'
-      x-process-time: '0.21'
-      x-service-time: '1.584'
+      x-data-sources: merra2,power
+      x-objects-time: '0.02'
+      x-process-time: '0.17'
+      x-service-time: '1.835'
     body:
       encoding: ''
       file: no
@@ -52,5 +52,5 @@ http_interactions:
         \r\nT2M_MAX         MERRA-2 Temperature at 2 Meters Maximum (C) \r\nT2M_MIN
         \        MERRA-2 Temperature at 2 Meters Minimum (C) \r\nPRECTOTCORR     MERRA-2
         Precipitation Corrected (mm/day) \r\n-END HEADER-\r\nYEAR,DOY,T2M,T2M_MAX,T2M_MIN,PRECTOTCORR\n2023,112,18.19,25.44,12.16,0.03\n2023,113,19.02,25.64,14.18,0.01\n2023,114,18.78,25.63,13.73,0.0\n2023,115,19.23,26.01,13.62,0.0\n2023,116,20.59,26.57,16.16,4.37\n2023,117,20.73,26.44,16.01,1.88\n2023,118,20.12,25.27,15.67,2.13\n2023,119,19.15,25.2,14.42,0.03\n2023,120,19.99,25.77,14.12,0.06\n2023,121,19.8,26.12,14.72,0.0\n2023,122,19.74,26.08,13.55,0.03\n2023,123,20.71,26.89,14.43,0.0\n2023,124,21.33,27.51,14.43,0.02\n2023,125,22.08,28.45,16.26,0.02\n2023,126,21.96,28.08,16.51,0.0\n2023,127,21.88,27.62,17.3,0.01\n2023,128,21.28,27.58,14.79,0.0\n2023,129,21.76,27.91,16.37,0.01\n2023,130,21.26,25.54,17.57,1.78\n2023,131,19.99,25.71,14.9,0.37\n2023,132,17.12,23.53,12.3,0.17\n2023,133,15.96,22.83,11.73,0.05\n2023,134,16.22,23.69,10.88,0.05\n2023,135,16.47,24.05,11.22,0.02\n2023,136,16.32,24.26,10.41,0.03\n2023,137,16.11,23.73,11.21,0.01\n2023,138,15.65,23.91,10.26,0.05\n2023,139,15.9,24.66,10.02,0.05\n2023,140,16.37,25.19,8.55,0.06\n2023,141,16.76,25.38,8.89,0.08\n2023,142,17.83,25.78,12.25,0.03\n2023,143,18.52,25.9,11.37,0.0\n2023,144,18.23,26.04,11.26,0.03\n2023,145,18.85,26.32,12.94,0.01\n2023,146,19.19,26.83,13.65,0.0\n2023,147,20.12,27.33,12.58,0.01\n2023,148,19.1,25.32,14.49,0.41\n2023,149,18.78,24.98,14.73,0.08\n2023,150,17.94,22.44,14.26,15.08\n2023,151,18.1,22.76,15.33,16.14\n2023,152,17.4,22.98,13.53,0.43\n2023,153,16.96,23.73,12.61,0.05\n2023,154,16.96,24.78,11.55,0.08\n2023,155,17.19,24.95,9.85,0.04\n2023,156,16.17,24.16,9.6,0.08\n2023,157,16.76,23.9,11.62,0.15\n2023,158,16.58,24.52,9.23,0.05\n2023,159,17.27,25.3,9.77,0.05\n2023,160,17.56,26.02,10.94,0.03\n2023,161,18.07,26.71,11.19,0.02\n2023,162,18.95,27.63,12.26,0.01\n2023,163,20.12,28.05,12.97,0.03\n2023,164,17.96,24.45,14.45,5.26\n2023,165,17.35,21.88,13.96,21.5\n2023,166,16.9,19.47,13.66,18.62\n2023,167,13.39,19.52,7.48,2.2\n2023,168,11.45,18.41,6.08,0.07\n2023,169,12.2,19.55,6.1,0.05\n2023,170,13.92,21.87,9.19,0.06\n2023,171,14.76,23.63,7.56,0.06\n2023,172,15.98,24.12,8.76,0.03\n2023,173,16.43,24.42,9.9,0.0\n2023,174,17.59,25.23,10.42,0.01\n2023,175,17.91,25.62,11.87,0.0\n2023,176,18.08,26.12,11.26,0.03\n2023,177,17.84,26.23,10.55,0.01\n2023,178,17.79,25.83,10.47,0.02\n2023,179,17.94,26.26,10.54,0.02\n2023,180,17.92,25.13,11.37,0.01\n2023,181,17.51,24.99,12.29,0.02\n"
-  recorded_at: 2023-11-11 03:58:03 GMT
+  recorded_at: 2023-11-14 11:13:56 GMT
   recorded_with: vcr/1.2.2, webmockr/0.9.0
