--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,28 +13,28 @@ Authors@R: c(
   person(
     given = "Graciela R.",
     family = "Sobierajski",
-    role = c("aut"),
+    role = "aut",
     comment = c(ORCID = "0000-0002-7211-9268")
   ),
   person(
     given = "Leticia L.",
     family = "Martins",
-    role = c("aut"),
+    role = "aut",
     comment = c(ORCID = "0000-0002-0299-3005")
   ),
   person(
     given = "Adam H.",
     family = "Sparks",
     email = "adamhsparks@gmail.com",
-    role = c("aut"),
+    role = "aut",
     comment = c(ORCID = "0000-0002-0061-8359")))
 Description: A set of functions designed to calculate the standardised
     precipitation and standardised precipitation evapotranspiration indices
     using NASA POWER data as described in Blain et al. (2023)
     <doi:10.2139/ssrn.4442843>.  These indices are calculated using a reference
     data source.  The functions verify if the indices' estimates meet the
-    normality assumption and how well NASA POWER estimates represent real world
-    data.  Indices are calculated in a routine mode.  Potential
+    assumption of normality and how well NASA POWER estimates represent
+    real-world data.  Indices are calculated in a routine mode.  Potential
     evapotranspiration amounts and the difference between rainfall and potential
     evapotranspiration are also calculated.  The functions adopt a basic time
     scale that splits each month into four periods.  Days 1 to 7, days 8 to 14,
